force-app/main/default/objects/WBS_Template_Item__c/WBS_Template_Item__c.object-meta.xml
<CustomObject>
    <description>A line in a WBS Template (hierarchical). Cloned into WBS_Item__c on instantiation.</description>
    <label>WBS Template Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WBS Template Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>