force-app/main/default/objects/WBS_Template_Item__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>WBS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>