force-app/main/default/objects/WBS_Template_Item__c/fields/Control_Account__c.field-meta.xml
<CustomField>
    <fullName>Control_Account__c</fullName>
    <label>Control Account</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>