force-app/main/default/objects/WBS_Template_Item__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <label>Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>FS</fullName><default>true</default><label>FS</label></value>
            <value><fullName>SS</fullName><default>false</default><label>SS</label></value>
            <value><fullName>FF</fullName><default>false</default><label>FF</label></value>
            <value><fullName>SF</fullName><default>false</default><label>SF</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>