force-app/main/default/objects/WBS_Template_Item__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Civil</fullName><default>false</default><label>Civil</label></value>
            <value><fullName>Mechanical</fullName><default>false</default><label>Mechanical</label></value>
            <value><fullName>Electrical</fullName><default>false</default><label>Electrical</label></value>
            <value><fullName>Instrumentation</fullName><default>false</default><label>Instrumentation</label></value>
            <value><fullName>Structural</fullName><default>false</default><label>Structural</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>