force-app/main/default/objects/WBS_Template_Item__c/fields/Parent_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template_Item__c</fullName>
    <label>Parent Template Item</label>
    <referenceTo>WBS_Template_Item__c</referenceTo>
    <relationshipLabel>Child Template Items</relationshipLabel>
    <relationshipName>Child_Template_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>