force-app/main/default/objects/WBS_Template_Item__c/fields/Predecessor_Code__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Code__c</fullName>
    <label>Predecessor Code(s)</label>
    <description>Comma-separated WBS code(s) of predecessor template item(s) within this template. Used to recreate dependencies on instantiation.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>