force-app/main/default/objects/WBS_Template_Item__c/fields/Typical_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Typical_Duration_Days__c</fullName>
    <label>Typical Duration (Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>