force-app/main/default/objects/WBS_Template_Item__c/fields/WBS_Template__c.field-meta.xml
<CustomField>
    <fullName>WBS_Template__c</fullName>
    <label>WBS Template</label>
    <referenceTo>WBS_Template__c</referenceTo>
    <relationshipLabel>Template Items</relationshipLabel>
    <relationshipName>Template_Items</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>